# ServerWatch

./: .gitignore  Dockerfile  docker-compose.yml  index.html  install.sh  main.js  manifest.json  nginx.conf  readme.md  service-worker.js  service-worker.js.map  site.webmanifest  styles.css  uninstall.sh
agent/: Cargo.toml  config.json
agent/src/: getters.rs  main.rs  models.rs  push_notifications.rs  temperature_monitor.rs
api/: fetchMetrics.js
css/: app.3a7cb05b.css  app.5c87132e.css  app.5ddbc996.css  app.62ece3b6.css  app.7c5debe5.css  app.8320c50a.css  app.9273ffbe.css  app.9e840a69.css  app.ac30c419.css  app.b8a80e70.css  app.fb7a6c1e.css
frontend/: index.html  main.js  package-lock.json  package.json  scripts.js  styles.css  vue.config.js
js/: app.1c10dca4.js  app.1c10dca4.js.map  app.20f365ce.js  app.20f365ce.js.map  app.2ed227b0.js  app.2ed227b0.js.map  app.69276064.js  app.69276064.js.map  app.69e043ac.js  app.69e043ac.js.map  app.6e4ece45.js  app.6e4ece45.js.map  app.7e540a57.js  app.7e540a57.js.map  app.9b2572f3.js  app.9b2572f3.js.map  app.9e1063da.js  app.9e1063da.js.map  app.9e6a1ce1.js  app.9e6a1ce1.js.map  app.aa5dc312.js  app.aa5dc312.js.map  app.cd6517e5.js  app.cd6517e5.js.map  chunk-vendors.26ef618b.js  chunk-vendors.26ef618b.js.map  chunk-vendors.3d73c447.js  chunk-vendors.3d73c447.js.map  chunk-vendors.405efee2.js  chunk-vendors.405efee2.js.map  chunk-vendors.fc264842.js  chunk-vendors.fc264842.js.map  chunk-vendors.fd5a415b.js  chunk-vendors.fd5a415b.js.map  chunk-vendors.fe3fea87.js  chunk-vendors.fe3fea87.js.map
styles/: dashboard.css
(+26 files in other folders)
