[package]
name = "rrpm-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.33.1"
tower-http = { version = "0.5", features = ["cors"] }
axum-server = { version = "0.6", features = ["tls-rustls"] }
rustls-pemfile = "2.1"
tokio-rustls = "0.25"